--- a/MacauSands/Info.plist
+++ b/MacauSands/Info.plist
@@ -17,9 +17,34 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>是否许允此App使用蓝牙？</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>是否允许此App使用日历？</string>
+	<key>NSCameraUsageDescription</key>
+	<string>是否允许此App访问您的相机？</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>只有获取地理位置才能签到和领取任务</string>
+	<key>NSLocationUsageDescription</key>
+	<string>只有获取地理位置才能签到和领取任务</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>只有获取地理位置才能签到和领取任务</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>是否允许此App使用您的麦克风？</string>
+	<key>NSMotionUsageDescription</key>
+	<string>访问运动与健康</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否允许此App访问您的相册？</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>访问提醒事项</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -28,6 +53,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
